// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > release > postReleaseComment > 200 > ok 1`] = `
{
  "accessRequest": {
    "_id": "65a6a4cc7546a826064b8bb9",
    "comments": [],
    "createdBy": "user",
    "deleted": false,
    "id": "test",
    "modelId": "test",
  },
}
`;

exports[`routes > release > postReleaseComment > audit > expected call 1`] = `
{
  "_id": "65a6a4cc7546a826064b8bba",
  "comments": [],
  "createdBy": "user",
  "deleted": false,
  "id": "test",
  "modelId": "test",
}
`;
